Swagger documentation update
